examples/passing/ExportExplicit2.purs
module Main where

import Control.Monad.Eff.Console (log)
import M1

testBar = bar

main = log "Done"
